--- a/src/apple/styles/apple.css
+++ b/src/apple/styles/apple.css
@@ -6,8 +6,17 @@ main {
   display: grid;
   gap: var(--small-spacing);
 }
+.card-content {
+  text-align: center;
+  display: grid;
+  gap: var(--small-spacing);
+  margin-bottom: var(--small-spacing);
+}
+.card-title {
+  font-size: var(--large-text);
+  margin-top: var(--large-spacing);
+}
 
-/* 제품 카드 배경 설정 */
 .ipadpro-card {
   background-color: #000;
 }
@@ -20,7 +29,17 @@ main {
   background: #f5f5f7;
 }
 
-/* 기본 제품 이미지 경로 설정 */
+.card-buttons {
+  display: inline-flex;
+  column-gap: var(--base-spacing);
+}
+.card-buttons .btn-primy,
+.card-buttons .btn-secondary {
+  font-size: var(--xx-small-text);
+  border-radius: 50px;
+  padding: var(--x-small-spacing) var(--small-spacing);
+}
+
 .ipadpro-card .card-img {
   background: url(./src/apple/products/ipad_pro.jpeg) center/cover no-repeat;
 }
